[project]
name = "sa2va-xj"
description = "Simple implementation of [a/ByteDance Sa2VA](https://github.com/bytedance/Sa2VA) nodes for ComfyUI."
version = "1.0.2"
license = {file = "LICENSE"} 
classifiers = [
    # For OS-independent nodes (works on all operating systems)
    "Operating System :: OS Independent",
    # GPU Accelerator support. Pick the ones that are supported by your extension.
    "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
]

dependencies = [
    "transformers>=4.57.0",
    "torch>=2.0.0",
    "qwen_vl_utils",
    "pillow",
    "numpy"
]

[project.optional-dependencies]
quantization = ["bitsandbytes"]
acceleration = ["flash-attn"]
all = ["bitsandbytes", "flash-attn"]

[project.urls]
Repository = "https://github.com/alexjx/ComfyUI-Sa2VA-XJ"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/alexjx/ComfyUI-Sa2VA-XJ"
"Bug Tracker" = "https://github.com/alexjx/ComfyUI-Sa2VA-XJ/issues"

[tool.comfy]
PublisherId = "alexjx"
DisplayName = "ComfyUI-Sa2VA-XJ"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
